tools/sddl/assembler/tests/success/stack_drop_all.asm
# Test: stack.drop - drop all values
push.u32 1
push.u32 2
push.u32 3
stack.drop
stack.drop
stack.drop
halt
