tools/sddl/assembler/tests/fail/push_u32_negative.asm
# EXPECT-ERROR: out of range
push.u32 -1
halt
